--- a/css/newthme.css
+++ b/css/newthme.css
@@ -111,8 +111,23 @@
   }
 }
 
-
-
-
-
   /* === Header Section  End === */
+
+
+  /* footer  start */
+
+  .footer {
+  text-align: center;
+  padding: 1rem;
+  background: #f8f9fa; /* light gray */
+  color: #555;
+  font-size: 0.9rem;
+  border-top: 1px solid #e0e0e0;
+}
+
+.footer p {
+  margin: 0;
+}
+
+
+/* footer ended */
